dist/manifests/vmware-lab-manifests/jenkins-k8/99jenkins-from-helm.yaml
---
# Source: jenkins/templates/jenkins-agent-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-agent
  namespace: kube-system
  labels:
    app: jenkins
    k8s-app: jenkins
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
    boss-part-of: jenkins
    version: "lts"
    # chart: "jenkins-0.28.11"
    component: "jenkins-master"
spec:
  ports:
    - port: 50000
      targetPort: 50000

      name: slavelistener
  selector:
    component: "jenkins-master"
    app: jenkins
  type: ClusterIP

---
# Source: jenkins/templates/jenkins-master-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: kube-system
  labels:
    app: jenkins
    k8s-app: jenkins
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
    boss-part-of: jenkins
    version: "lts"
    # heritage: "Tiller"
    # release: "RELEASE-NAME"
    # chart: "jenkins-0.28.11"
    component: "jenkins-master"

  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"

spec:
  ports:
    - port: 8080
      name: http
      targetPort: 8080

  selector:
    component: "jenkins-master"
    app: jenkins
  type: ClusterIP


---
# Source: jenkins/templates/tests/jenkins-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "ui-test-3owng"
  namespace: kube-system
  annotations:
    "helm.sh/hook": test-success
spec:
  # nodeSelector:
  #  app: jenkins

  containers:
    - name: ui-test
      image: jenkins/jenkins:lts
      command: ["/tools/bats/bats", "-t", "/tests/run.sh"]
      volumeMounts:
      - mountPath: /tests
        name: tests
        readOnly: true
      - mountPath: /tools
        name: tools
  volumes:
  - name: tests
    configMap:
      name: jenkins-tests
  - name: tools

    emptyDir: {}
  restartPolicy: Never

---
# Source: jenkins/templates/jenkins-master-deployment.yaml

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: jenkins
  namespace: kube-system
  labels:
    # chart: "jenkins-0.28.11"
    # heritage: "Tiller"
    # release: "RELEASE-NAME"
    app: jenkins
    addonmanager.kubernetes.io/mode: "Reconcile"
    boss-part-of: "jenkins"
    component: "jenkins-master"
    k8s-app: jenkins
    kubernetes.io/cluster-service: "true"
    version: "lts"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      component: "jenkins-master"
  template:
    metadata:
      labels:
        app: jenkins
        addonmanager.kubernetes.io/mode: "Reconcile"
        boss-part-of: "jenkins"
        component: "jenkins-master"
        k8s-app: jenkins
        kubernetes.io/cluster-service: "true"
        version: "lts"
      # annotations:
      #   checksum/config: a1e1f63e6c69d17d0dc317536d5b69fe0749b6d27ded37a52a5aa4217932e0b8
    spec:
      # nodeSelector:
      #  app: jenkins

      securityContext:
        # runAsUser: 65534
        # fsGroup: 65534
        runAsUser: 1000
        fsGroup: 1000
      serviceAccountName: jenkins
      containers:
        - name: jenkins
          image: "jenkins/jenkins:lts"
          imagePullPolicy: "Always"
          args: [ "--argumentsRealm.passwd.$(ADMIN_USER)=$(ADMIN_PASSWORD)",  "--argumentsRealm.roles.$(ADMIN_USER)=admin"]
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 50000
              name: slavelistener
          livenessProbe:
            httpGet:
              path: "//login"
              port: http
            initialDelaySeconds: 90
            timeoutSeconds: 5
            failureThreshold: 12
          readinessProbe:
            httpGet:
              path: "//login"
              port: http
            initialDelaySeconds: 60
            periodSeconds: 10
          # Resources configuration is a little hacky. This was to prevent breaking
          # changes, and should be cleanned up in the future once everybody had
          # enough time to migrate.
          resources:

            limits:
              cpu: 2000m
              memory: 2048Mi
            requests:
              cpu: 50m
              memory: 256Mi


          volumeMounts:
            -
              mountPath: /var/jenkins_home
              name: jenkins-home
              readOnly: false
            -
              mountPath: /var/jenkins_config
              name: jenkins-config
              readOnly: true
            -
              mountPath: /usr/share/jenkins/ref/plugins/
              name: plugin-dir
              readOnly: false
            -
              mountPath: /usr/share/jenkins/ref/secrets/
              name: secrets-dir
              readOnly: false
      volumes:
      - name: jenkins-config
        configMap:
          name: jenkins
      - name: plugin-dir

        emptyDir: {}
      - name: secrets-dir

        emptyDir: {}
      - name: jenkins-home
        #persistentVolumeClaim:
        #  claimName: jenkins

        emptyDir: {}
---
# Source: jenkins/templates/jenkins-master-ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: kube-system
  labels:
    addonmanager.kubernetes.io/mode: "Reconcile"
    boss-part-of: "jenkins"
    component: "jenkins-master"
    k8s-app: jenkins
    kubernetes.io/cluster-service: "true"
    version: "lts"
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 16384m
    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"

spec:
  rules:
  - host: "jenkins.hyenaclan.org"
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 8080
        path: /

---
# Source: jenkins/templates/jenkins-backup-cronjob.yaml


---
# Source: jenkins/templates/jenkins-backup-rbac.yaml


---
# Source: jenkins/templates/jenkins-master-networkpolicy.yaml


---
# Source: jenkins/templates/jobs.yaml
